--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,venv,python,visualstudiocode,pycharm,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,venv,python,visualstudiocode,pycharm,django
-push.bat
-pull.bat
+*.bat
 ### Django ###
 *.log
 *.pot
