--- a/.gitignore
+++ b/.gitignore
@@ -617,3 +617,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,node,vuejs,django,python,visualstudiocode,pycharm
+/.metadata/
