--- a/.gitignore
+++ b/.gitignore
@@ -616,5 +616,39 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+### C++ ###
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,node,vuejs,django,python,visualstudiocode,pycharm
 /.metadata/
