--- a/C++/C++ 공부/C++ 공부.vcxproj
+++ b/C++/C++ 공부/C++ 공부.vcxproj
@@ -139,10 +139,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="day01-1.cpp">
+    <ClCompile Include="기본 입출력.cpp">
       <LanguageStandard Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">stdcpp20</LanguageStandard>
     </ClCompile>
-    <ClCompile Include="day01-2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
