--- a/C++/C++ 공부/C++ 공부.vcxproj.filters
+++ b/C++/C++ 공부/C++ 공부.vcxproj.filters
@@ -15,10 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="day01-1.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="day01-2.cpp">
+    <ClCompile Include="기본 입출력.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
