--- a/Algorithm/C++/Exe/Exe.vcxproj
+++ b/Algorithm/C++/Exe/Exe.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{59805c9d-2b9c-4b3e-a036-85dd7e6515d7}</ProjectGuid>
-    <RootNamespace>exe</RootNamespace>
+    <ProjectGuid>{a98e963f-de90-4711-9881-01818989fb19}</ProjectGuid>
+    <RootNamespace>EXE</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="EXE.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
