--- a/Algorithm/C++/Exe/Exe.vcxproj.filters
+++ b/Algorithm/C++/Exe/Exe.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="EXE.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
